force-app/main/default/objects/Contact/fields/Active_Case_on_Individual_Count__c.field-meta.xml
<CustomField>
    <fullName>Active_Case_on_Individual_Count__c</fullName>
    <label>Active Case on Individual Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>