force-app/main/default/objects/Contact/fields/Firm_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Firm_Subtype__c</fullName>
    <formula>TEXT(Account.Sub_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Firm Subtype</label>
    <type>Text</type>
</CustomField>