force-app/main/default/objects/Contact/fields/INAP_Firm_Admin__c.field-meta.xml
<CustomField>
    <fullName>INAP_Firm_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>INAP Firm Admin</label>
    <type>Checkbox</type>
</CustomField>