force-app/main/default/objects/Contact/validationRules/Cant_deactivate_if_Active_in_teams.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_deactivate_if_Active_in_teams</fullName>
    <active>false</active>
    <errorConditionFormula>AND(Active_Count_on_Teams__c &gt; 0, TEXT(Status__c) !=&apos;Active&apos;)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>You can&apos;t deactivate a Contact if they are active on teams</errorMessage>
</ValidationRule>