force-app/main/default/objects/Contact/validationRules/CantDeactivate_ActiveCases.validationRule-meta.xml
<ValidationRule>
    <fullName>CantDeactivate_ActiveCases</fullName>
    <active>true</active>
    <errorConditionFormula>Deactivate_Validation__c = true</errorConditionFormula>
    <errorMessage>This contact is part of active Cases. Please replace them on the Case</errorMessage>
</ValidationRule>