force-app/main/default/objects/Contact/listViews/Arbitrators_and_Facilitators.listView-meta.xml
<ListView>
    <fullName>Arbitrators_and_Facilitators</fullName>
    <columns>CONTACT.FIRST_NAME</columns>
    <columns>CONTACT.LAST_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Firm_Subtype__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Firm_Subtype__c</field>
        <operation>contains</operation>
        <value>Facilitation,Arbitration</value>
    </filters>
    <label>Arbitrators and Facilitators</label>
</ListView>